finished inverse module
Signed-off-by: wangpengfan <wangpengfan2012@gmail.com>

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//WebContent/WEB-INF/jsp/voc_book_head_v.jsp=UTF-8
+encoding//WebContent/WEB-INF/jsp/voc_book_inverse_v.jsp=UTF-8
 encoding//WebContent/WEB-INF/jsp/voc_book_navbar_v.jsp=UTF-8
 encoding//WebContent/WEB-INF/jsp/voc_book_normal_v.jsp=UTF-8
